force-app/main/default/objects/Book__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Record Count</label>
    <summaryForeignKey>Book_history__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>