force-app/main/default/objects/Book__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Book_history__c.Issue_Amount__c</summarizedField>
    <summaryForeignKey>Book_history__c.Book__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>